# vkengine

./: .gitignore  CMakeLists.txt
app1/: CMakeLists.txt
app1/src/: main.cpp
engine/: CMakeLists.txt
engine/geometry/: CMakeLists.txt  mesh.hpp  mesh_reader.cpp  mesh_reader.hpp  vertex.cpp  vertex.hpp
engine/graphics/: CMakeLists.txt  allocator_interface.hpp  buffer_copy_command.cpp  buffer_copy_command.hpp  buffer_manager.cpp  buffer_manager.hpp  command_interface.hpp  commander.cpp  commander.hpp  depth_texture.cpp  depth_texture.hpp  descriptor_interface.hpp  descriptor_set.cpp  descriptor_set.hpp  device_context.cpp  device_context.hpp  graphics_error.hpp  graphics_manager.cpp  graphics_manager.hpp  graphics_renderer.cpp  graphics_renderer.hpp  graphics_types.hpp  image_context.cpp  image_context.hpp  image_copy_command.cpp  image_copy_command.hpp  image_renderer.cpp  image_renderer.hpp  image_texture.cpp  image_texture.hpp  image_transition_command.cpp  image_transition_command.hpp  instance_context.cpp  instance_context.hpp  memory_barrier.cpp  memory_barrier.hpp  memory_barrier_command.cpp  memory_barrier_command.hpp  memory_block.cpp  memory_block.hpp  (+22 more)
engine/image/: CMakeLists.txt  image_wrapper.cpp  image_wrapper.hpp
engine/include/: content.hpp  engine.hpp  observer.hpp  renderer.hpp  signal.hpp
engine/include/private/: renderer.hpp
engine/src/: command.cpp  copy.cpp  core.cpp  delete.cpp  engine.cpp  error.cpp  pipeline.cpp  renderer.cpp  shaders.cpp  swapchain.cpp  sync.cpp
engine/utility/: CMakeLists.txt  allocator_interface.hpp  console_logger.hpp  debug.hpp  error.hpp  file_logger.cpp  file_logger.hpp  log.hpp  log_level.hpp  logger_interface.hpp  logger_provider.cpp  logger_provider.hpp
examples/: CMakeLists.txt
examples/black_window/: CMakeLists.txt  main.cpp
examples/colored_window/: CMakeLists.txt  main.cpp
examples/colored_window/src/: main.cpp
examples/hardcoded_triangle/: CMakeLists.txt
examples/hardcoded_triangle/shaders/: monochrome_triangle.frag  monochrome_triangle.vert  triangle.frag  triangle.vert
examples/hardcoded_triangle/src/: main.cpp
examples/loaded_triangle/: CMakeLists.txt
examples/loaded_triangle/shaders/: triangle.vert
examples/loaded_triangle/src/: main.cpp
examples/memory_buffer/: CMakeLists.txt
examples/memory_buffer/shaders/: shader.frag  shader.vert
examples/memory_buffer/src/: main.cpp  matrix.cpp  matrix.hpp  matrix_descriptor.cpp  pipeline_provider.cpp  pipeline_provider.hpp  plain_mesh.cpp  plain_mesh.hpp  texture_descriptor.cpp  texture_descriptor.hpp
examples/plain_rotation/: CMakeLists.txt
examples/plain_rotation/shaders/: shader.vert
examples/plain_rotation/src/: matrix_descriptor.cpp  matrix_descriptor.hpp  pipeline_provider.cpp  plain_mesh.cpp  plain_mesh.hpp  texture_descriptor.hpp
examples/triangle_color/: CMakeLists.txt
examples/triangle_color/shaders/: colorful_triangle.frag  colorful_triangle.vert
examples/triangle_color/src/: main.cpp  pipeline_provider.cpp  pipeline_provider.hpp  triangle_pipeline.cpp  triangle_pipeline.hpp
examples/triangle_from_memory/: CMakeLists.txt
examples/triangle_from_memory/shaders/: triangle.vert
examples/triangle_from_memory/src/: main.cpp
examples/triangle_switch_color/: CMakeLists.txt
examples/triangle_switch_color/shaders/: monochrome_triangle.frag  monochrome_triangle.vert
examples/triangle_switch_color/src/: main.cpp
scripts/: compile_shaders.cmake
utility/: CMakeLists.txt
utility/include/: error.hpp
